--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <source srcset="img/medium/castlerock_med.jpg" media="(min-width: 700px) and (max-width: 1500px)" />
             <source srcset="img/small/castlerock_sm.jpg" media="(max-width: 700px)" />
             <img src="img/medium/castlerock_med.jpg" alt="castlerock">
-        </picture><figcaption>A photo by Yinan Chen</figcaption></figure></li>
+        </picture><figcaption>A photo by Yiman Chen</figcaption></figure></li>
         
         <li><figure><picture>
             <source srcset="img/large/crowd_lg.jpg" media="(min-width: 1500px)"/>
